<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvTitluTestEfectuat"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/titlu_test_efectuat"
            android:textSize="17dp"
            android:gravity="left"/>


        <TextView
            android:id="@+id/tvNrIntrebariTestEfectuat"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="100dp"
            android:text="@string/nr_intrebari_corecte"
            android:textStyle="italic"
            android:gravity="left"
            android:textSize="12dp"/>

        <TextView
            android:id="@+id/tvTimpTestEfectuat"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="100dp"
            android:text="@string/timp_test_efectuat"
            android:textStyle="italic"
            android:textSize="12dp"
            android:gravity="left"/>


    </LinearLayout>
</RelativeLayout>