<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvAdresa"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="260dp"
        android:textSize="15sp"
        android:text="@string/adresa"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="59dp" />

    <TextView
        android:id="@+id/tvAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginStart="100dp"
        android:text="@string/abbout"
        android:textSize="23sp"
        android:textStyle="italic"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="136dp" />

    <TextView
        android:id="@+id/tvEchipa"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="180dp"
        android:text="@string/Echipa"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="218dp" />

    <TextView
        android:id="@+id/tvVersiune"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="115dp"
        android:layout_marginTop="115dp"
        android:text="@string/Versiune"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="295dp" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="320dp"
        android:layout_width="320dp"
        android:layout_height="200dp" />


</RelativeLayout>