<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".main.MeniuProfesori">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:src="@drawable/teacher"/>

    <TextView
        android:id="@+id/nameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btn_tests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tests"
        android:layout_margin="10dp"
        android:background="@drawable/button_design"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btn_istoric"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prof_istoric"
        android:layout_margin="10dp"
        android:background="@drawable/button_design"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btn_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/results"
        android:layout_margin="10dp"
        android:background="@drawable/button_design"
        android:textColor="@android:color/white"/>
</LinearLayout>