<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MeniuStudenti"
    >

    <Button
        android:id="@+id/buttonTeste"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="100dp"
        android:text="@string/btn_Teste"
        android:background="@drawable/button_design"/>

    <Button
        android:id="@+id/buttonIstoric"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_toEndOf="@id/buttonTeste"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="225dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_alignParentStart="true"
        android:text="@string/btn_istoric"
        android:background="@drawable/button_design"/>


    <Button
        android:id="@+id/buttonGrafice"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="350dp"
        android:layout_toEndOf="@id/buttonIstoric"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="100dp"
        android:text="@string/btn_Grafice"
        android:background="@drawable/button_design"/>
</RelativeLayout>